# dx-fx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dx-fx.sln  includes.props
CSM/: CSM.vcxproj  CSM.vcxproj.filters  CSMApp.cpp  CSMApp.h  DataTypes.h  RenderData.cpp  RenderData.h  depthmap.fx  example.fx  lighting.fx
Example/: Example.vcxproj  ExampleApp.cpp  ExampleApp.h  Main.cpp  README.md  example.fx
Examples/BrokenGlass/: BrokenGlassApp.cpp  BrokenGlassApp.h  CMakeLists.txt  Main.cpp  README.md  simple.hlsl  warped.hlsl
Examples/CSM/: CMakeLists.txt  CSM.vcxproj  CSM.vcxproj.filters  CSMApp.cpp  CSMApp.h  DataTypes.h  Main.cpp  README.md  frustum.hlsl
Examples/Example/: Example.vcxproj  Example.vcxproj.filters  ExampleApp.cpp
Examples/Fullscreen/: CMakeLists.txt  FullscreenApp.cpp  FullscreenApp.h  Main.cpp  README.md  example.hlsl
Examples/Imgui/: CMakeLists.txt  ImguiApp.cpp  ImguiApp.h  Main.cpp  README.md
Examples/Minimal/: CMakeLists.txt  ExampleApp.cpp  Main.cpp  README.md
Examples/Multithread/: CMakeLists.txt  Main.cpp  MultithreadApp.cpp  MultithreadApp.h  README.md
Examples/SDF/: CMakeLists.txt  Main.cpp  README.md  SDFApp.cpp  SDFApp.h  ShaderReloader.h  lighting.hlsl  main.hlsl  operations.hlsl  sdf.hlsl
Examples/TAA/: CMakeLists.txt  Main.cpp  README.md  TAA.hlsl  TAAApp.cpp  TAAApp.h  render.hlsl
Examples/VolumetricExplosion/: CMakeLists.txt  Main.cpp  README.md  VolumetricExplosionApp.cpp  VolumetricExplosionApp.h  example.hlsl
Framework/: API.cpp  API.h  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Common.h  DX.cpp  DX.h  Device.cpp  Device.h  Framework.cpp  Framework.h  Framework.vcxproj  Framework.vcxproj.filters  Input.cpp  Input.h  Main.cpp  Model.cpp  Model.h  PixelShader.cpp  PixelShader.h  Timer.cpp  Timer.h  Transformation.cpp  Transformation.h  VertexShader.cpp  VertexShader.h  Window.cpp  Window.h  example.fx
Framework/fw/: API.cpp  API.h  Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  Blitter.cpp  Blitter.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Common.cpp  Common.h  Config.h  DX.cpp  DX.h  Device.cpp  Device.h  DomainShader.cpp  DomainShader.h  Framework.cpp  Framework.h  HullShader.cpp  HullShader.h  Input.cpp  Input.h  Model.cpp  Model.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PixelShader.cpp  PixelShader.h  Timer.cpp  Transformation.cpp  Transformation.h  VertexShader.cpp  VertexShader.h  (+4 more)
Framework/shaders/: blitter.hlsl
